--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <artifactId>swagger-annotations</artifactId>
       <version>2.2.22</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.15</version>
+    </dependency>
+
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
