переделал еще раз контроллеры, удалил интерфейсы, в связи с их бесполезности (yagni).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=little-avito
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/little__avito
+spring.datasource.username=aat
+spring.datasource.password=327331
 
 spring.jpa.hibernate.ddl-auto=update
 
