маппер User работает, проект запускается

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/little__avito
 spring.datasource.username=aat
 spring.datasource.password=327331
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
