пред последние допы?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=little-avito
 spring.datasource.url=jdbc:postgresql://localhost:5432/little__avito
 spring.datasource.username=aat
 spring.datasource.password=327331
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.hikari.auto-commit=false
+
 
 spring.jpa.hibernate.ddl-auto=update
 
